cmake_minimum_required(VERSION 3.14)
project(vector_wallpaper_generator)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(abstract)
include_directories(interface)
include_directories(objets-complexes)
include_directories(primitives)
include_directories(svg)
include_directories(util)

add_executable(vector_wallpaper_generator
        abstract/environnement.cpp
        abstract/environnement.h
        abstract/formes.cpp
        abstract/formes.h
        interface/astre.cpp
        interface/astre.h
        interface/plantes.cpp
        interface/plantes.h
        objets-complexes/arbre.cpp
        objets-complexes/arbre.h
        objets-complexes/champignon.cpp
        objets-complexes/champignon.h
        objets-complexes/ciel.cpp
        objets-complexes/ciel.h
        objets-complexes/colline.cpp
        objets-complexes/colline.h
        objets-complexes/etoile.cpp
        objets-complexes/etoile.h
        objets-complexes/fleur.cpp
        objets-complexes/fleur.h
        objets-complexes/herbe.cpp
        objets-complexes/herbe.h
        objets-complexes/lune.cpp
        objets-complexes/lune.h
        objets-complexes/montagne.cpp
        objets-complexes/montagne.h
        objets-complexes/nuage.cpp
        objets-complexes/nuage.h
        objets-complexes/plan.cpp
        objets-complexes/plan.h
        objets-complexes/sol.cpp
        objets-complexes/sol.h
        objets-complexes/soleil.cpp
        objets-complexes/soleil.h
        primitives/cercle.cpp
        primitives/cercle.h
        primitives/ellipse.cpp
        primitives/ellipse.h
        primitives/rectangle.cpp
        primitives/rectangle.h
        primitives/triangle.cpp
        primitives/triangle.h
        svg/coords.cpp
        svg/coords.h
        svg/couleur.cpp
        svg/couleur.h
        svg/svgfile.cpp
        svg/svgfile.h
        util/mingw.thread.h
        util/util.cpp
        util/util.h
        extensions/heure.cpp
        extensions/heure.h
        interface/interface.cpp
        interface/interface.h
        main.cpp)
